--- a/.github/workflows/mxe.yml
+++ b/.github/workflows/mxe.yml
@@ -141,20 +141,20 @@ jobs:
       with:
         name: unittests
 
-    - name: Install CMake
-#      uses: ./.github/actions/install-cmake
-#      with:
-#        version: '3.17.2'
-      run: |
-        cmake --version
-        Invoke-WebRequest -Uri "https://github.com/Kitware/CMake/releases/download/v3.16.3/cmake-3.16.3-win64-x64.zip" -OutFile "cmake-3.16.3-win64-x64.zip"
-        7z x cmake-3.16.3-win64-x64.zip
-        dir
-        dir cmake-3.16.3-win64-x64\bin
-        echo "$(pwd)\cmake-3.16.3-win64-x64\bin"
-        echo "::add-path::$(pwd)\cmake-3.16.3-win64-x64\bin"
-
-    - run: cmake --version
+#    - name: Install CMake
+##      uses: ./.github/actions/install-cmake
+##      with:
+##        version: '3.17.2'
+#      run: |
+#        cmake --version
+#        Invoke-WebRequest -Uri "https://github.com/Kitware/CMake/releases/download/v3.16.3/cmake-3.16.3-win64-x64.zip" -OutFile "cmake-3.16.3-win64-x64.zip"
+#        7z x cmake-3.16.3-win64-x64.zip
+#        dir
+#        dir cmake-3.16.3-win64-x64\bin
+#        echo "$(pwd)\cmake-3.16.3-win64-x64\bin"
+#        echo "::add-path::$(pwd)\cmake-3.16.3-win64-x64\bin"
+#
+#    - run: cmake --version
 
     - run: dir
     - run: dir build
