try with --force-new-ctest-process

--- a/.github/workflows/mxe.yml
+++ b/.github/workflows/mxe.yml
@@ -171,7 +171,7 @@ jobs:
         cd build
         $Env:QT_LOGGING_DEBUG = 1
         $Env:QT_LOGGING_RULES = "*.info=true;*.debug=true"
-        ctest --verbose
+        ctest --verbose --force-new-ctest-process
 
 #        Start-Process -FilePath ctest -Wait -NoNewWindow -ArgumentList "--verbose","-O test.log" -WorkingDirectory build
 #        type build\test.log
