--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -166,7 +166,7 @@ jobs:
         mkdir build && cd build && cmake -DTW_BUILD_ID='github' ${GITHUB_WORKSPACE}
 
     - name: Build
-      run: make -j
+      run: make VERBOSE=1
       working-directory: build
 
     - name: Test
@@ -331,7 +331,7 @@ jobs:
       run: cmake -B build -DTW_BUILD_ID='github' ${GITHUB_WORKSPACE} -DCMAKE_PREFIX_PATH="/usr/local/opt/qt5"
 
     - name: Build
-      run: make -j
+      run: make VERBOSE=1
       working-directory: build
 
     - name: Test
