--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -349,5 +349,8 @@ jobs:
         - distro: openSUSE
           file: Dockerfile.opensuse
     steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+
     - name: Build
       run: docker build -f .github/workflows/${{ matrix.file }} .
