xvfb-run mac-env on linux

--- a/.github/workflows/mac-env.yml
+++ b/.github/workflows/mac-env.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Install Dependencies
       run: |
         sudo apt update -y
-        sudo apt install -y qtbase5-dev
+        sudo apt install -y qtbase5-dev xvfb libxkbcommon-x11-0 libxcb-icccm4 libxcb-image0 libxcb-keysyms1 libxcb-render-util0 libxcb-xinerama0
 
     - name: Configure
       run: cmake -B build ${GITHUB_WORKSPACE}/mac-env
@@ -24,7 +24,7 @@ jobs:
       working-directory: build
 
     - name: Test
-      run: ./mac-env
+      run: xvfb-run ./mac-env
       working-directory: build
 
   build-macosx:
