--- a/.github/workflows/mac-env.yml
+++ b/.github/workflows/mac-env.yml
@@ -48,5 +48,5 @@ jobs:
       working-directory: build
 
     - name: Test
-      run: open mac-env.app && cat mac-env.log
+      run: open mac-env.app && sleep 5 && cat mac-env.log
       working-directory: build
