--- a/.github/workflows/mac-env.yml
+++ b/.github/workflows/mac-env.yml
@@ -47,6 +47,9 @@ jobs:
       run: make
       working-directory: build
 
+    - name: Amend .profile
+      run: echo "PATH=\"/abc:\$PATH\"" >> ~/.profile && cat ~/.profile
+
     - name: Test
       run: open mac-env.app && sleep 5 && cat mac-env.log
       working-directory: build
