--- a/.github/workflows/macports.yml
+++ b/.github/workflows/macports.yml
@@ -6,20 +6,22 @@ on:
 jobs:
   build-macosx:
     name: Mac OS X
-    runs-on: macos-latest
+    runs-on: macos-10.15
 
     steps:
     - name: Checkout
       uses: actions/checkout@v2
 
     - name: Install MacPorts
-      uses: keepitsimpletech/actions/setup-macports@setup-macports/releases/v1
+      run: |
+        wget https://github.com/macports/macports-base/releases/download/v2.6.2/MacPorts-2.6.2-10.15-Catalina.pkg
+        sudo /usr/sbin/installer -pkg MacPorts-2.6.2-10.15-Catalina.pkg -target /
 
     - run: port version
 
-    - run: port selfupdate
+    - run: sudo port selfupdate
 
-    - run: port install hunspell lua poppler-qt5
+    - run: sudo port install hunspell lua poppler-qt5
 
     - name: Configure
       run: cmake -B build -DTW_BUILD_ID='github' ${GITHUB_WORKSPACE} -DCMAKE_PREFIX_PATH="/usr/local/opt/qt5"
