Don't update MSYS

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -198,7 +198,7 @@ jobs:
     - name: Setup MSYS
       uses: numworks/setup-msys2@v1
       with:
-        update: true
+        update: false
 
     - run: tasklist
     - run: taskkill /im ssh-agent.exe
