git config --global core.autocrlf input

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -201,6 +201,9 @@ jobs:
         update: true
         install: mingw-w64-x86_64-cmake git make mingw-w64-x86_64-gcc mingw-w64-x86_64-hunspell mingw-w64-x86_64-lua mingw-w64-x86_64-poppler mingw-w64-x86_64-qt5
 
+    - run: git config --global core.autocrlf input
+      shell: bash
+
     - name: Checkout
       uses: actions/checkout@v2
 
