--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,16 @@ jobs:
           hunspell: 1.2.8
           poppler-data: 0.4.6
           cmake: 3.1.0
+        - qt: 5.3
+          poppler: 0.24.5
+          hunspell: 1.2.9
+          poppler-data: 0.4.6
+          cmake: 3.1.0
+        - qt: 5.3
+          poppler: 0.24.5
+          hunspell: 1.2.10
+          poppler-data: 0.4.6
+          cmake: 3.1.0
     steps:
     - name: Checkout
       uses: actions/checkout@v2
