--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.1)
-project(mac-timing)
+project(mac-sleep)
 
 find_package(Qt5 COMPONENTS Core Test)
 
-add_executable(mac-timing mac-timing.cpp)
-target_link_libraries(mac-timing Qt5::Core Qt5::Test)
+add_executable(mac-sleep mac-sleep.cpp)
+target_link_libraries(mac-sleep Qt5::Core Qt5::Test)
