--- a/.github/workflows/mac-sleep.yml
+++ b/.github/workflows/mac-sleep.yml
@@ -13,6 +13,7 @@ jobs:
 #    - run: cmake --build build
 #    - run: ./mac-sleep
 #      working-directory: build
+    - run: /usr/lib/qt5/bin/qmake --version
     - run: /usr/lib/qt5/bin/qmake
     - run: make
     - run: ./mac-sleep
@@ -27,6 +28,7 @@ jobs:
 #    - run: cmake --build build
 #    - run: ./mac-sleep
 #      working-directory: build
+    - run: /usr/lib/qt5/bin/qmake --version
     - run: /usr/local/opt/qt5/bin/qmake
     - run: make
     - run: mac-sleep.app/Contents/MacOS/mac-sleep
