Set MACOSX_BUNDLE and link against -framework CoreServices

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,10 @@ project(mac-sysinfo)
 
 find_package(Qt5 COMPONENTS Core)
 
-add_executable(mac-sysinfo mac-sysinfo.cpp)
-target_link_libraries(mac-sysinfo Qt5::Core)
+if (APPLE)
+	set(GUI_TYPE MACOSX_BUNDLE)
+	set(ADDITIONAL_LIBS "-framework CoreServices")
+endif (APPLE)
+
+add_executable(mac-sysinfo ${GUI_TYPE} mac-sysinfo.cpp)
+target_link_libraries(mac-sysinfo Qt5::Core ${ADDITIONAL_LIBS})
