Initial attempt at NSProcessInfo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,8 @@ find_package(Qt5 COMPONENTS Core)
 if (APPLE)
 	set(GUI_TYPE MACOSX_BUNDLE)
 	set(ADDITIONAL_LIBS "-framework CoreServices")
+	set(ADDITIONAL_SRC "sysinfo.mm")
 endif (APPLE)
 
-add_executable(mac-sysinfo ${GUI_TYPE} mac-sysinfo.cpp)
+add_executable(mac-sysinfo ${GUI_TYPE} mac-sysinfo.cpp ${ADDITIONAL_SRC})
 target_link_libraries(mac-sysinfo Qt5::Core ${ADDITIONAL_LIBS})
