Migrate from Gestalt to NSProcessInfo for obtaining the Mac OS X version

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -101,6 +101,7 @@ if (WIN32)
   list(APPEND TEXWORKS_SRCS InterProcessCommunicatorWin.cpp)
 elseif (APPLE)
   list(APPEND TEXWORKS_SRCS InterProcessCommunicatorDummy.cpp)
+  list(APPEND TEXWORKS_SRCS utils/OSVersionInfo_mac.mm)
 else ()
   list(APPEND TEXWORKS_SRCS InterProcessCommunicatorDBus.cpp)
 endif ()
